src/objects/DMAPP__Dealmaker_AM_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>These settings control certain aspects of Dealmaker AM behavior.</description>
    <fields>
        <fullName>DMAPP__Auto_Post_Chat_Recurrence__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Auto Chat Plan Performance</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMAPP__Disable_Qualify_Link__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Setting this to true will disable the qualify link on the potential tab of the Opportunity Map intersection dialog in AM.</description>
        <inlineHelpText>Setting this to true will disable the qualify link on the potential tab of the Opportunity Map intersection dialog in AM.</inlineHelpText>
        <label>Disable Qualify Link</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__Disable_Scorecard_Batch__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable this checkbox to disable the Batch Jobs for Scoring</description>
        <inlineHelpText>Enable this checkbox to disable the Batch Jobs for Scoring</inlineHelpText>
        <label>Disable Scoring Batches</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__Expected_Number_Of_Contacts__c</fullName>
        <defaultValue>8</defaultValue>
        <label>Expected Number Of Contacts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMAPP__Opp_Amount_Field__c</fullName>
        <description>Use this field to specify a custom currency field for opportunities instead of the standard currency amount.</description>
        <inlineHelpText>Use this field to specify a custom currency field for opportunities instead of the standard currency amount.</inlineHelpText>
        <label>Opp Amount Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMAPP__Opp_Product_Amount_Field__c</fullName>
        <description>If you are using ProductLine Splits and have an Opp Amount Field configured, set this to the API Name of a custom amount field on the Opportunity Product. Refer to admin guide.</description>
        <inlineHelpText>If you are using ProductLine Splits and have an Opp Amount Field configured, set this to the API Name of a custom amount field on the Opportunity Product. Refer to admin guide.</inlineHelpText>
        <label>Opp Product Amount Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMAPP__Scorecard_Batch_Execution_Time__c</fullName>
        <description>Use this field to set the execution time for the Scorecard batch job</description>
        <inlineHelpText>Use this field to set the execution time for the Scorecard batch job</inlineHelpText>
        <label>Scorecard Batch Execution Time</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMAPP__Show_Completeness__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Enable this checkbox to display the Completeness tab in AM.</description>
        <inlineHelpText>Enable this checkbox to display the Completeness tab in AM.</inlineHelpText>
        <label>Show Completeness</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__Show_Scorecard__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Uncheck this box and the scorecard will not be shown.</description>
        <inlineHelpText>This field controls whether or not the Scorecard is shown in Smart Account Manager.</inlineHelpText>
        <label>Show Scorecard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__Show_Segmentation_Map__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Uncheck this box and the segmentation map will not be shown.</description>
        <inlineHelpText>This field controls whether or not the Segmentation Map is shown in Smart Account Manager.</inlineHelpText>
        <label>Show Segmentation Map</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__Show_Unit_Custom_List__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Uncheck this box and the custom unit list will not be shown.</description>
        <inlineHelpText>This field controls whether or not the Plan Unit List Dropdown is shown on the Opp Map page.</inlineHelpText>
        <label>Show Unit Custom List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__Show_Value_Map__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Uncheck this box and the value map will not be shown.</description>
        <inlineHelpText>This field controls whether or not the Value Map is shown in Smart Account Manager.</inlineHelpText>
        <label>Show Value Map</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__Use_Account_Grouping__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable this checkbox to enable Account Grouping</description>
        <inlineHelpText>Enable this checkbox to enable Account Grouping</inlineHelpText>
        <label>Use Account Grouping</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__Use_ProductLine_Splits__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This field controls whether the Opportunities are split in AM according to Product Lines.</description>
        <inlineHelpText>This field controls whether the Opportunities are split in AM according to Product Lines.</inlineHelpText>
        <label>Use ProductLine Splits</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__Use_Solution_Family__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable this setting to allow grouping of Solutions into Solution Families on your Opportunity Map. Refer to the admin guide for setting up Solution Families.</description>
        <inlineHelpText>Enable this setting to allow grouping of Solutions into Solution Families on your Opportunity Map. Refer to the admin guide for setting up Solution Families.</inlineHelpText>
        <label>Use Solution Family</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__Use_Standard_List_Page__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Use Standard List Page</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__Write_Back_Opp_Amount_Field__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Should the opportunity amount be written back to the custom field</description>
        <inlineHelpText>If you have set a value in the &apos;Opp Amount Field&apos; this field should be ticked. This will mean that when you qualify a potential opportunity its amount value will be saved to the custom Opp Amount Field you have set.</inlineHelpText>
        <label>Write Back Opp Amount Field</label>
        <type>Checkbox</type>
    </fields>
    <label>Dealmaker AM Settings</label>
</CustomObject>